--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-toastr": "^11.1.2",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
+    "toastr": "^2.1.4",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
