--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^4.1.0",
     "ngx-toastr": "^11.1.2",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
